tests/errors/not-equal.au
class Class {
    var a; var b;
}

my_class != new Class;